# slow-axum

./: Cargo.toml  README.md
src/: index.html  main.rs
